--- a/packages/apps/client/src/container/ClientDepartmentSetup/department-setup.scss
+++ b/packages/apps/client/src/container/ClientDepartmentSetup/department-setup.scss
@@ -26,7 +26,7 @@
     
     .preview-modal{
         label{
-            margin-bottom:0rem;
+            // margin-bottom:0rem;
         }
         .form-check{
             // margin-top:-2px;
