--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -369,9 +369,9 @@
 
     }
 
-    .chart {
+    .line-chart {
         background-color:$white;
-        padding:20px 40px;
+         padding:20px;
         width:100%;
         @include border-radius(0.5rem);
         // box-shadow:   -10px -10px 10px $gray-200,
@@ -389,14 +389,62 @@
         }
     }
 
-    .app-log{
-        background-color:$white;
-        padding:20px 40px;
-        width:100%;
-        // box-shadow:   -10px -10px 10px $gray-200,
-        // 10px 10px 10px $gray-400; 
-        @include border-radius(0.5rem);
+    .doctor-revenue{
+        height: 100%;
+        min-height: 300px;
+
+        .app-log{
+            background-color:$white;
+            padding:20px 40px;
+            width:100%;
+            height: calc(100% - 19px - 14px);
+            // box-shadow:   -10px -10px 10px $gray-200,
+            // 10px 10px 10px $gray-400; 
+            @include border-radius(0.5rem);
+
+            .filter-message{
+                position: absolute;
+                top:50%;
+                left:50%;
+                width:100%;
+                height: 200px;
+                transform: translate(-50%,-50%);
+            }
+        }
     }
+
+    .appointment-queue{
+        height: 100%;
+        // margin-left:-15px;
+        //     margin-right:-15px;
+
+        .app-log{
+            
+            background-color:$white;
+            padding:20px 40px;
+            width:100%;
+            min-height: 500px;
+            // box-shadow:   -10px -10px 10px $gray-200,
+            // 10px 10px 10px $gray-400; 
+            @include border-radius(0.5rem);
+
+            .filter-message{
+                position: absolute;
+                top:40%;
+                left:50%;
+                width:100%;
+                height: 200px;
+                transform: translate(-50%,-40%);
+            }
+        }
+    }
+
+    .app-log{
+
+      
+    }
+
+  
 
 
     .overall-box{
@@ -558,6 +606,13 @@
       }
 
 
+}
+
+
+@include media-breakpoint-down(sm) {
+.doctor-revenue{
+    margin-top:1.5rem;
+}
 }
 
 // .dashboard-image{
