sidebar-scrollbar-design-issue

--- a/packages/common-sass/src/scss/_layout.scss
+++ b/packages/common-sass/src/scss/_layout.scss
@@ -14,6 +14,10 @@
     position           : fixed;
     @include border-radius($cogent-radius);
     // margin:1rem;
+
+    .view{
+    background:none;
+    }
   }
 
   #content-wrapper {
