--- a/packages/common-sass/src/scss/_custom-components.scss
+++ b/packages/common-sass/src/scss/_custom-components.scss
@@ -2,6 +2,7 @@
 @import "./custom-components/aggrid-multiline-column";
 @import "./custom-components/aggrid-action";
 @import "./custom-components/custom-scrollbar";
+@import "./custom-components/editatable-datatable";
 @import "./custom-components/expandible-search";
 @import "./custom-components/hybrid-input";
 @import "./custom-components/hybrid-select";
