--- a/packages/common-sass/src/scss/pages/_dashboard.scss
+++ b/packages/common-sass/src/scss/pages/_dashboard.scss
@@ -43,11 +43,12 @@
     }
 
     .hospital-list{
-        width:300px;
+        width:200px;
         float:right;
 
         .hospital-list-input{
             position: relative;
+          
 
             .form-label{
                 position: absolute;
@@ -408,6 +409,18 @@
             // 10px 10px 10px $gray-400; 
             @include border-radius(0.5rem);
 
+            .app-queue-datatable{
+                margin-top:130px;
+                .filter-message{
+                    position: absolute;
+                    top:70%;
+                    left:50%;
+                    width:100%;
+                    height: 200px;
+                    transform: translate(-50%,-70%);
+                }
+            }
+
             .filter-message{
                 position: absolute;
                 top:50%;
@@ -416,7 +429,42 @@
                 height: 200px;
                 transform: translate(-50%,-50%);
             }
+          
+
+           
         }
+
+        .react-datepicker-popper[data-placement^="bottom"]{
+            margin-top:-8px !important;
+           
+
+        }
+
+        .react-datepicker-popper{
+      
+            margin-left:-100px;
+        }
+
+        .react-datepicker-popper[data-placement^="bottom"]  .react-datepicker__triangle,
+         .react-datepicker-popper[data-placement^="top"]  .react-datepicker__triangle::before {
+             margin-left:100px;
+         }
+
+         .doctor-revenue-revenue{
+            width:100%;
+  
+            .data-image{
+              //   width:25px;
+                margin-top: 4px;
+            }
+  
+            ul li{
+                line-height: 22px;
+            }
+  
+  
+        }
+
     }
 
     .appointment-queue{
@@ -493,7 +541,14 @@
         // 10px 10px 10px $gray-400; 
         @include border-radius(0.5rem);
 
+        .date-group{
+            text-align: left;
+            padding-left:15px;
+        }
 
+        .date{
+            padding-right:15px;
+        }
 
         .doughnut-chart{
             width:60%;
