--- a/packages/common-sass/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass/src/scss/pages/_profile-setup.scss
@@ -318,6 +318,14 @@
     }
 }
 
+.profile-edit-modal{
+    .assign-menu, .assign-previledge{
+        height:422px;
+    }
+
+   
+}
+
 
 .preview-modal {
     .modal-content {
@@ -348,6 +356,11 @@
         display: block;
     }
 
+    .status-box{
+        margin-top:-10px;
+        margin-bottom:16px;
+    }
+
     .form-check {
         display      : inline-block;
         padding-right: 10px;
@@ -366,21 +379,9 @@
             font-size: 12px;
         }
     }
-
-    // .assign-menu,.assign-previledge  {
-    //     height: 370px;
-    //     .am-header {
-    //         padding:8px ;
-    //     }
-
-    //     .am-title{
-    //         font-weight: 500;
-    //     }
-
-
-
-    // }
 }
+
+
 
 
 
