--- a/packages/apps/admin/src/container/CompanySetup/companyHoc.scss
+++ b/packages/apps/admin/src/container/CompanySetup/companyHoc.scss
@@ -121,7 +121,7 @@ h5.title{
 
 .image-upload-container{
   text-align: center;
-  position: absolute;
+//   position: absolute;
   top:14px;
   left:14px;
 
