dynamic-dashboard-roles-in-client

--- a/packages/apps/client/src/container/ClientAdminSetup/admin-setup.scss
+++ b/packages/apps/client/src/container/ClientAdminSetup/admin-setup.scss
@@ -9,11 +9,19 @@
  @import '~bootstrap/scss/mixins';
 
  .module{
-
+  
     &.form-check{
         margin-left:15px;
         display: inline-block;
     }
+ }
+
+ .dash-roles-container{
+     .module{
+         display: block;
+         margin-bottom:6px;
+         text-transform: capitalize;
+     }
  }
 
  .upload-button{
