--- a/packages/common-sass-client/src/scss/utilities/_typography.scss
+++ b/packages/common-sass-client/src/scss/utilities/_typography.scss
@@ -53,3 +53,37 @@ body {
 .text-white .text-muted {
   color: rgba(255, 255, 255, .6) !important;
 }
+
+.fw-200{
+  font-weight: 200;
+}
+
+.fw-300{
+  font-weight: 300;
+}
+
+.fw-400{
+  font-weight: 400;
+}
+
+.fw-500{
+  font-weight: 500;
+}
+
+.fw-600{
+  font-weight: 600;
+}
+
+.fw-700{
+  font-weight: 700;
+}
+
+
+.fw-800{
+  font-weight: 800;
+}
+
+
+.fw-900{
+  font-weight: 900;
+}
