company-admin-setup

--- a/packages/common-sass/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass/src/scss/pages/_profile-setup.scss
@@ -381,7 +381,13 @@
     }
 }
 
-
+.dash-roles-container{
+    .module{
+        display: block;
+        margin-bottom:6px;
+        text-transform: capitalize;
+    }
+}
 
 
 
