minor-design-issues-companhy-setup,app-log,spec-setup

--- a/packages/apps/admin/src/container/CompanySetup/companyHoc.scss
+++ b/packages/apps/admin/src/container/CompanySetup/companyHoc.scss
@@ -119,6 +119,10 @@ h5.title{
     }
 }
 
+#fControl_company-address{
+    min-height: 64px;
+}
+
 .image-upload-container{
   text-align: center;
 //   position: absolute;
