--- a/packages/apps/client/src/container/ClientSpecializationSetup/specialization.scss
+++ b/packages/apps/client/src/container/ClientSpecializationSetup/specialization.scss
@@ -16,3 +16,9 @@ h5.title{
     // @include border-radius($cogent-radius);
     display: inline-block !important;
 }
+
+.specialization-form{
+    .form-label{
+       margin-bottom:3px;
+    }
+}
