--- a/packages/common-sass-client/src/scss/custom-components/_loading.scss
+++ b/packages/common-sass-client/src/scss/custom-components/_loading.scss
@@ -21,3 +21,13 @@ width: 0px;
     width: 1.25em;
   }
 }
+
+.saving{
+  img{
+    display: inline-block;
+    width:10px;
+    margin-top:5px;
+    margin-left:1px;
+    height: auto;
+  }
+}
