--- a/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
+++ b/packages/common-sass/src/scss/custom-components/_aggrid-multiline-column.scss
@@ -40,5 +40,11 @@
             
         }
     }
+    .fa{
+        color:$gray-900;
+    }
+    .fa-money{
+        color:$cogent !important;
+    }
 
 }
