--- a/packages/common-sass/src/scss/pages/_profile-setup.scss
+++ b/packages/common-sass/src/scss/pages/_profile-setup.scss
@@ -334,7 +334,7 @@
 
         .modal-header {
 
-            background-color         : darken($cogent, 5%);
+            // background-color         : darken($cogent, 5%);
             // background      : linear-gradient(180deg,darken($cogent, 25%), rgba(0,212,255,1) 100%);
             //background-image : url("../images/clinic5.png");
             justify-content    : center;
@@ -342,13 +342,43 @@
             background-size    : cover;
             background-position: center;
             position           : relative;
-            padding-top        : 20px;
-            margin-bottom      : 20px;
+            padding       : 25px;
+            // margin-bottom      : 20px;
             text-align         : center;
-            color              : $white;
+            color              : $gray-800;
             border             : none;
             opacity            : 0.9;
+            
+            .close{
+                color:$gray-800;
+                font-size: 1.6rem;
 
+                &:hover{
+                    color:$gray-900;
+                   
+                }
+            }
+
+            
+
+            .modal-title{
+                // text-decoration: underline;
+                // position: relative;
+                // &::before{
+                //     content: "";
+                // display: block;
+                // position: absolute;
+                // width: 25%;
+                // height: 1px;
+                // bottom: -2px;
+                // background-color: #6c757d;
+                // }
+            }
+
+        }
+
+        .modal-body{
+            padding:25px;
         }
     }
 
