--- a/packages/ui-elements/src/CDoubleShiftSearch/doubleShiftSearch.scss
+++ b/packages/ui-elements/src/CDoubleShiftSearch/doubleShiftSearch.scss
@@ -7,54 +7,32 @@
 // // Customized Bootstrap variables
 @import "~@frontend-appointment/common-sass/src/scss/variables/custom-bootstrap-variable";
 @import '~bootstrap/scss/mixins';
-// .search-comp.input-group{
-//   display:flex;
-//   min-width:200px;
-//   justify-content: flex-end;
-//   transition: width 0.4s linear;
 
-//   .search-btn{
-//     border-radius:0 4px 4px 0 !important;
-// }
-
-
-//   .form-control{
-//     transition: width 0.4s linear;
-//   }
-
-//   &.open{
-//     .form-control{
-//         display:none
-//     }
-
-//     .search-btn{
-//       border-radius:4px !important;
-//   }
-
-
-//   }
-
-
-//   .search-form{
-//     position: relative;
-//     &::before{
-//       position: absolute;
-//       left: 5px;
-//       top: 50%;
-//       -webkit-transform: translateY(-50%);
-//       transform: translateY(-50%);
-//       color: #cccccc;
-//       z-index: 4;
-
-//     }
-//   }
-
-
-// }
 
 input {
 	outline: none;
 }
+
+.search-button{
+
+}
+
+#menu-search{
+	.search-text{
+		color:$gray-500;
+		position: absolute;
+		top: 50%;
+   		transform: translateY(-50%);
+		right:44px;
+		z-index: 2;
+		font-size: 0.8rem;
+		font-weight: 400;
+		// line-height: 1.5;
+	
+	}
+
+}
+
 input[type=search] {
 	-webkit-appearance: textfield;
 	-webkit-box-sizing: border-box;
@@ -62,7 +40,12 @@ input[type=search] {
 	font-family: inherit;
 	font-size: 100%;
 	height: auto;
+	z-index: 10;
 
+}
+
+input.active + span.search-text{
+	display: none;
 }
 
 input::-webkit-search-decoration,
